--- a/TagPlug-Android/res/layout/activity_main.xml
+++ b/TagPlug-Android/res/layout/activity_main.xml
@@ -14,4 +14,14 @@
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
 
+    <Button
+        android:id="@+id/send"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:text="Send" />
+
 </RelativeLayout>
