--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -3,9 +3,7 @@
 {
 	position: fixed;
  	left: 50%;
-	top: 50%;
-	width: 100%;
-	height: 20%;
-	margin-left: -50%;
-	background: url('../images/back 2.png');
+	top: 100%;
+	height: 50%;
+	opacity: 1;
 }
